--- a/README
+++ b/README
@@ -1,9 +1,11 @@
+For installation instructions see the INSTALL file.
+----------------------
 Procmail & formail mail processing package.
-Copyright (c) 1990-1991, S.R.van den Berg, The Netherlands.
+Copyright (c) 1990-1992, S.R. van den Berg, The Netherlands.
 
 Some legal stuff:
 
-Use this software package at your own risk.  The programmer can not
+Use this software package at your own risk.  The programmer cannot
 be held liable for any incurred damages, directly or indirectly due to
 the use of this software.
 
@@ -16,14 +18,15 @@ If you distribute it, please leave the package intact.	You are allowed to
 take parts from this distribution and distribute these separately as long
 as you retain the copyright messages.  If you redistribute any part of this
 package in a modified form, be sure to mark the parts you changed.
-If you have some important changes that might be usefull to the rest of the
+If you have some important changes that might be useful to the rest of the
 world, contact me instead.
 
 -------------------------- SYSTEM REQUIREMENTS -------------------------------
 
 Any *NIX-alike system.
 
-Sendmail, smail, MMDF or compatible mailers.
+Sendmail, smail, MMDF or compatible mailers (in effect any mailer that can
+process RFC-822 compliant mails).
 
 The most important system calls that need to be supported (among others):
 dup(),wait(),getpwent(),fork(),pipe()
@@ -32,18 +35,19 @@ For a more complete list of all library references see "includes.h"
 
 ------------------------------ DESCRIPTION -----------------------------------
 
-The procmail mail processing program. (v2.31 1991/10/22)
+The procmail mail processing program. (v2.61 1991/01/31)
 
 Can be used to create mail-servers, mailing lists, sort your incoming mail
 into separate folders/files (real convenient when subscribing to one or more
-mailing lists), preprocess your mail, or selectively forward certain incoming
-mail automatically to someone.
+mailing lists or for prioritising your mail), preprocess your mail, start
+any programs upon mail arrival (e.g. to generate different chimes on your
+workstation for different types of mail) or selectively forward certain
+incoming mail automatically to someone.
 
 The accompanying formail program enables you to generate autoreplies, split up
 digests/mailboxes into the original messages, do some very simple
-header-munging, or force mail into mail-format (with leading From line).
-
-For installation instructions see the INSTALL file.
+header-munging/extraction, or force mail into mail-format (with leading From
+line).
 
 ----------------------
 
@@ -61,7 +65,7 @@ For a more extensive list of features see the FEATURES file.
 
 ----------------------
 
-However, as with any program, bugs can not be completely ruled out.
+However, as with any program, bugs cannot be completely ruled out.
 I tested the program extensively, and believe it should be relatively
 bug free (no known bug at the time).  Should, however, anyone find any
 bugs (highly unlikely :-), I would be pleased (well, sort of :-) to hear
@@ -73,7 +77,7 @@ to point them out to me; I like correct English just as much as you do).
 
 Please note that this program essentially is supposed to be static, that
 means no extra features (honouring the VNIX spirit) are supposed to be
-added (though any usefull suggestions will be appreciated and evaluated if
+added (though any useful suggestions will be appreciated and evaluated if
 time permits).
 
 Cheers,
@@ -92,6 +96,6 @@ The latest version can be obtained directly from the ftp-archive at:
 
 	amaru.informatik.rwth-aachen.de (137.226.112.31)
 
-	as compressed tar file:		pub/unix/procmail.tar.Z
+	as compressed tar file:		pub/unix/procmail.tar.Z		<100KB
 	or in compressed shar format:	pub/unix/procmail.0?.Z
 ----------------------
